Error de ortografia

--- a/Documents/AEROFaltDetection.tex
+++ b/Documents/AEROFaltDetection.tex
@@ -48,7 +48,7 @@ This paper proposes a methodology for fault diagnosis in sensor tower using a da
 This paper is organized as following. In section \ref{sec:sensortower}, we describe the SCADA data coming from the two sensor tower components used in the algorithms, in section \ref{sec:failures} we show the different kind of failures that can happen in the sensor towers. In section \ref{sec:algorithms}, fault detection algorithms are presented. Results and discussion are in section \ref{sec:results} and the conclusion can be found in section \ref{sec:conclusion}.
 
 \section{Meteorological mast components}\label{sec:sensortower}
-Meteorological masts are towers made of steel where measuring components are installed. In this section we explain two components of sensor towers called anemometers and wind vanes and we describe how these components records their data throguht the SCADA system.
+Meteorological masts are towers made of steel where measuring components are installed. In this section we explain two components of sensor towers called anemometers and wind vanes and we describe how these components records their data through the SCADA system.
 The sensor towers, are  lattice constructions consisting in three main beams shored up by smaller beams. The mast is a long slender construction, which gives an almost two-dimensional flow round a cross-section at certain height above the ground. 
 
 \subsection{Components}
